# dagapp

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/dagapp/: base.html  utils.html
_modules/dagapp/examples/: classification_metric_factory.html  consulting_fees.html  rent_or_buy.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: dagapp.rst.txt
_sources/module_docs/dagapp/: base.rst.txt  examples.rst.txt  page_funcs.rst.txt  utils.rst.txt
_sources/module_docs/dagapp/examples/: classification_metric_factory.rst.txt  consulting_fees.rst.txt  rent_or_buy.rst.txt  vectorized_example.rst.txt
_static/: documentation_options.js
dagapp/: __init__.py  base.py  page_funcs.py  utils.py
dagapp/examples/: __init__.py  classification_metric_factory.py  configs_example.py  consulting_fees.py  infection.py  rent_or_buy.py  simple.py  simple_example.py  vectorized_example.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/dagapp/: utils.html
docs/_modules/dagapp/examples/: classification_metric_factory.html
docs/_sources/module_docs/dagapp/examples/: infection.rst.txt
docs/module_docs/: dagapp.html
docs/module_docs/dagapp/: base.html  page_funcs.html  utils.html
docs/module_docs/dagapp/examples/: classification_metric_factory.html  configs_example.html  infection.html  simple_example.html  vectorized_example.html
docsrc/: index.rst  table_of_contents.rst
docsrc/module_docs/dagapp/examples/: configs_example.rst  simple_example.rst
misc/: Developing a binary classification metric factory app.ipynb
module_docs/: dagapp.html
module_docs/dagapp/: base.html  examples.html  page_funcs.html  utils.html
module_docs/dagapp/examples/: classification_metric_factory.html  configs_example.html  consulting_fees.html  infection.html  rent_or_buy.html  simple_example.html  vectorized_example.html
