[metadata]
name = dagapp
version = 0.1.3
url = https://github.com/i2mint/dagapp
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Making apps from DAGs by just snapping your fingers
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = dagapp

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	meshed
	i2
	streamlit
	numpy

